Fix missing Roboto font and spacing in section-1

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ a {
 
 .header {
     display:flex;
+    flex-wrap:wrap;
     justify-content:space-between;
 }
 
